app/f5-hello-world/f5-hello-world-http-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: f5-hello-world
 namespace: default
 labels:
   app: f5-hello-world
spec:
 ports:
 - name: f5-hello-world
   port: 8080
   protocol: TCP
   targetPort: 8080
 type: NodePort
 selector:
  app: f5-hello-world
