app/f5-hello-world/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
 name: f5-hello-world
 namespace: default
 labels:
   app: f5-hello-world
spec:
 type: ExternalName
 externalName: www.f5.halimfadhli.com
